--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fridayagency/classnames": "npm:@FridayAgency/classnames@^1.0.1",
+    "@fridayagency/classnames": "^1.1.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
